--- a/Readme
+++ b/Readme
@@ -2,6 +2,10 @@ Hi Team
 
 My idea is to use a esp32 board to collect some data and show it on the phone over the captive portal of wifimanager.h i will keep adding more details about this idea.
 
+Hardware:
+
+Esp32-poe-p-cam details = https://www.elecrow.com/media/qb/tmp/common/file/2024/03/Schematic_esp32-S3-POE-P-CAM_V.5.0.0_2024-03-12_b7d00204af39bd09f900fe861459032a.pdf
+
 This is the list of files of the project
 
 FLOW_NET.drawio.png = flowdiagram 
